syntax = "proto3";

package authorizer.accesscontroller.v1alpha1;

import "authorizer-tech/accesscontroller/v1alpha1/acl.proto";
import "google/api/annotations.proto";

option go_package = "github.com/authorizer-tech/access-controller/api/protos/authorizer-tech/accesscontroller/v1alpha1;acl";

// The service to administer namespace configurations.
service NamespaceConfigService {

  // Write a new namespace configuration, overwriting any prior one.
  rpc WriteConfig(WriteConfigRequest) returns (WriteConfigResponse) {
    option (google.api.http) = {
      post: "/authorizer/access-controller/v1alpha1/namespace-configs",
      body: "*"
    };
  }

  // Read a namespace configuration.
  rpc ReadConfig(ReadConfigRequest) returns (ReadConfigResponse) {
    option (google.api.http) = {
      get: "/authorizer/access-controller/v1alpha1/namespace-configs"
    };
  }
}

// The request for a NamespaceConfigService.WriteConfig rpc.
message WriteConfigRequest {
    NamespaceConfig config = 1;
}

// The response for a NamespaceConfigService.WriteConfig rpc.
message WriteConfigResponse {
    string snaptoken = 1;
}

// The request for a NamespaceConfigService.ReadConfig rpc.
message ReadConfigRequest {
    string namespace = 1;
    string snaptoken = 2;
}

// The response for a NamespaceConfigService.ReadConfig rpc.
message ReadConfigResponse {
    string namespace = 1;
    NamespaceConfig config = 2;
    string snaptoken = 3;
}

message NamespaceConfig {
    string name = 1;
    repeated Relation relations = 2;
}

message Relation {
    string name = 1;
    Rewrite rewrite = 2;
}

message Rewrite {
    oneof rewrite_operation {
        SetOperation union = 1;
        SetOperation intersection = 2;
    }
}

message SetOperation {
    message Child {
        message This {}

        oneof child_type {
            This _this = 1;
            ComputedSubjectset computed_subjectset = 2;
            TupleToSubjectset tuple_to_subjectset = 3;
            Rewrite rewrite = 4;
        }
    }

    repeated Child children = 1;
}

message TupleToSubjectset {
    message Tupleset { string relation = 1; }

    Tupleset tupleset = 1;
    ComputedSubjectset computed_subjectset = 2;
}

message ComputedSubjectset {
    string relation = 2;
}